@@ -2,6 +2,8 @@ package name.abuchen.portfolio.ui.preferences;
 
 import java.io.File;
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -18,6 +20,7 @@ import org.eclipse.core.runtime.FileLocator;
 import org.eclipse.core.runtime.Platform;
 import org.eclipse.e4.ui.css.swt.theme.ITheme;
 import org.eclipse.e4.ui.css.swt.theme.IThemeEngine;
+import org.eclipse.jface.layout.GridDataFactory;
 import org.eclipse.jface.layout.GridLayoutFactory;
 import org.eclipse.jface.preference.PreferencePage;
 import org.eclipse.jface.viewers.ArrayContentProvider;
@@ -25,16 +28,19 @@ import org.eclipse.jface.viewers.ComboViewer;
 import org.eclipse.jface.viewers.LabelProvider;
 import org.eclipse.jface.viewers.StructuredSelection;
 import org.eclipse.swt.SWT;
+import org.eclipse.swt.widgets.Button;
 import org.eclipse.swt.widgets.Composite;
 import org.eclipse.swt.widgets.Control;
 import org.eclipse.swt.widgets.Display;
 import org.eclipse.swt.widgets.Label;
 
+import name.abuchen.portfolio.money.Values;
 import name.abuchen.portfolio.ui.Images;
 import name.abuchen.portfolio.ui.Messages;
 import name.abuchen.portfolio.ui.PortfolioPlugin;
 import name.abuchen.portfolio.ui.UIConstants;
 import name.abuchen.portfolio.ui.theme.ThemePreferences;
+import name.abuchen.portfolio.ui.util.ValueColorScheme;
 import name.abuchen.portfolio.ui.util.swt.ControlDecoration;
 
 @SuppressWarnings("restriction")
@@ -61,6 +67,8 @@ public final class ThemePreferencePage extends PreferencePage
 
     private int currentFontSize = -1;
     private ComboViewer fontSizeCombo;
+
+    private List<Button> valueColorSchemeOptions = new ArrayList<>();
 
     public ThemePreferencePage(IThemeEngine themeEngine)
     {
@@ -151,6 +159,23 @@ public final class ThemePreferencePage extends PreferencePage
                 fontSizeDecorator.hide();
         });
 
+        // color value scheme selection
+
+        label = new Label(area, SWT.NONE);
+        label.setText(Messages.LabelColorValueScheme);
+        GridDataFactory.fillDefaults().grab(true, false).span(2, 1).applyTo(label);
+
+        var selectedSchemaId = getPreferenceStore().getString(UIConstants.Preferences.VALUE_COLOR_SCHEME);
+        var schemes = ValueColorScheme.getAvailableSchemes();
+
+        for (var scheme : schemes)
+        {
+            var radioButton = createSchemeOption(area, scheme);
+            radioButton.setData(scheme);
+            radioButton.setSelection(Objects.equals(selectedSchemaId, scheme.getIdentifier()));
+            valueColorSchemeOptions.add(radioButton);
+        }
+
         return area;
     }
 
@@ -198,6 +223,15 @@ public final class ThemePreferencePage extends PreferencePage
                 writeFrontSizeToCSS(selectedFontSize);
         }
 
+        for (var button : valueColorSchemeOptions)
+        {
+            if (button.getSelection())
+            {
+                getPreferenceStore().setValue(UIConstants.Preferences.VALUE_COLOR_SCHEME,
+                                ((ValueColorScheme) button.getData()).getIdentifier());
+            }
+        }
+
         return super.performOk();
     }
 
@@ -210,12 +244,18 @@ public final class ThemePreferencePage extends PreferencePage
 
         fontSizeCombo.setSelection(new StructuredSelection(-1));
 
+        for (var button : valueColorSchemeOptions)
+        {
+            var scheme = (ValueColorScheme) button.getData();
+            button.setSelection(ValueColorScheme.STANDARD_SCHEME.equals(scheme.getIdentifier()));
+        }
+
         super.performDefaults();
     }
 
-    private Path getPathToCustomCSS() throws IOException
+    private Path getPathToCustomCSS() throws IOException, URISyntaxException
     {
-        URL url = FileLocator.resolve(new URL("platform:/meta/name.abuchen.portfolio.ui/custom.css")); //$NON-NLS-1$
+        URL url = FileLocator.resolve(new URI("platform:/meta/name.abuchen.portfolio.ui/custom.css").toURL()); //$NON-NLS-1$ //NOSONAR
         return new File(url.getFile()).toPath();
     }
 
@@ -233,7 +273,7 @@ public final class ThemePreferencePage extends PreferencePage
 
             return Integer.parseInt(m.group(1));
         }
-        catch (IOException | NumberFormatException e)
+        catch (IOException | URISyntaxException | NumberFormatException e)
         {
             PortfolioPlugin.log(e);
             return -1;
@@ -273,9 +313,39 @@ public final class ThemePreferencePage extends PreferencePage
 
             Files.writeString(getPathToCustomCSS(), css, StandardOpenOption.TRUNCATE_EXISTING);
         }
-        catch (IOException e)
+        catch (IOException | URISyntaxException e)
         {
             PortfolioPlugin.log(e);
         }
+    }
+
+    private Button createSchemeOption(Composite parent, ValueColorScheme scheme)
+    {
+        var radioButton = new Button(parent, SWT.RADIO);
+        radioButton.setText(scheme.getName());
+        GridDataFactory.fillDefaults().span(2, 1).applyTo(radioButton);
+
+        // Color preview composite
+        var previewComposite = new Composite(parent, SWT.NONE);
+        GridLayoutFactory.fillDefaults().numColumns(4).margins(20, 5).spacing(10, 5).applyTo(previewComposite);
+        GridDataFactory.fillDefaults().span(2, 1).grab(true, false).applyTo(previewComposite);
+
+        // Positive
+        var positiveArrowLabel = new Label(previewComposite, SWT.NONE);
+        positiveArrowLabel.setImage(scheme.upArrow());
+
+        var positiveLabel = new Label(previewComposite, SWT.NONE);
+        positiveLabel.setText(Values.Amount.format(Values.Amount.factorize(1234.56)));
+        positiveLabel.setForeground(scheme.positiveForeground());
+
+        // Negative
+        var negativeArrowLabel = new Label(previewComposite, SWT.NONE);
+        negativeArrowLabel.setImage(scheme.downArrow());
+
+        var negativeLabel = new Label(previewComposite, SWT.NONE);
+        negativeLabel.setText(Values.Amount.format(Values.Amount.factorize(-1234.56)));
+        negativeLabel.setForeground(scheme.negativeForeground());
+
+        return radioButton;
     }
 }
