@@ -6,7 +6,8 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.text.MessageFormat;
 import java.text.ParseException;
 import java.time.DateTimeException;
@@ -23,6 +24,8 @@ import org.json.simple.JSONArray;
 import org.json.simple.JSONObject;
 import org.json.simple.JSONValue;
 
+import com.google.common.annotations.VisibleForTesting;
+
 import name.abuchen.portfolio.Messages;
 import name.abuchen.portfolio.PortfolioLog;
 import name.abuchen.portfolio.model.Exchange;
@@ -33,6 +36,7 @@ import name.abuchen.portfolio.money.Values;
 import name.abuchen.portfolio.online.QuoteFeed;
 import name.abuchen.portfolio.online.QuoteFeedData;
 import name.abuchen.portfolio.util.Dates;
+import name.abuchen.portfolio.util.OnlineHelper;
 import name.abuchen.portfolio.util.WebAccess;
 
 public class YahooFinanceQuoteFeed implements QuoteFeed
@@ -51,10 +55,18 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
         return Messages.LabelYahooFinance;
     }
 
+    @Override
+    public String getGroupingCriterion(Security security)
+    {
+        return "finance.yahoo.com"; //$NON-NLS-1$
+    }
+
     @SuppressWarnings("nls")
+    @VisibleForTesting
     public String rpcLatestQuote(Security security) throws IOException
     {
         return new WebAccess("query1.finance.yahoo.com", "/v8/finance/chart/" + security.getTickerSymbol())
+                        .addUserAgent(OnlineHelper.getYahooFinanceUserAgent()) //
                         .addParameter("lang", "en-US").addParameter("region", "US")
                         .addParameter("corsDomain", "finance.yahoo.com").get();
     }
@@ -71,17 +83,53 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
             Optional<String> time = extract(json, 0, "\"regularMarketTime\":", ","); //$NON-NLS-1$ //$NON-NLS-2$
             if (time.isPresent())
             {
+                Optional<String> exchangeTimezoneName = extract(json, 0, "\"exchangeTimezoneName\":\"", "\","); //$NON-NLS-1$ //$NON-NLS-2$
+                var exchangeZoneId = extractTimezone(exchangeTimezoneName.orElse(null), ZoneOffset.UTC);
+
                 long epoch = Long.parseLong(time.get());
-                price.setDate(Instant.ofEpochSecond(epoch).atZone(ZoneId.systemDefault()).toLocalDate());
+                price.setDate(Instant.ofEpochSecond(epoch).atZone(exchangeZoneId).toLocalDate());
             }
+
+            Optional<String> quoteCurrency = extract(json, 0, "\"currency\":\"", "\","); //$NON-NLS-1$ //$NON-NLS-2$
 
             Optional<String> value = extract(json, 0, "\"regularMarketPrice\":", ","); //$NON-NLS-1$ //$NON-NLS-2$
             if (value.isPresent())
-                price.setValue(asPrice(value.get()));
+            {
+                price.setValue(convertBritishPounds(asPrice(value.get()), quoteCurrency.orElse(null),
+                                security.getCurrencyCode()));
+            }
 
-            price.setHigh(LatestSecurityPrice.NOT_AVAILABLE);
-            price.setLow(LatestSecurityPrice.NOT_AVAILABLE);
-            price.setVolume(LatestSecurityPrice.NOT_AVAILABLE);
+            Optional<String> high = extract(json, 0, "\"regularMarketDayHigh\":", ","); //$NON-NLS-1$ //$NON-NLS-2$
+            if (high.isPresent())
+            {
+                price.setHigh(convertBritishPounds(asPrice(high.get()), quoteCurrency.orElse(null),
+                                security.getCurrencyCode()));
+            }
+            else
+            {
+                price.setHigh(LatestSecurityPrice.NOT_AVAILABLE);
+            }
+
+            Optional<String> low = extract(json, 0, "\"regularMarketDayLow\":", ","); //$NON-NLS-1$ //$NON-NLS-2$
+            if (low.isPresent())
+            {
+                price.setLow(convertBritishPounds(asPrice(low.get()), quoteCurrency.orElse(null),
+                                security.getCurrencyCode()));
+            }
+            else
+            {
+                price.setLow(LatestSecurityPrice.NOT_AVAILABLE);
+            }
+
+            Optional<String> volume = extract(json, 0, "\"regularMarketVolume\":", ","); //$NON-NLS-1$ //$NON-NLS-2$
+            if (volume.isPresent())
+            {
+                price.setVolume(Long.parseLong(volume.get()));
+            }
+            else
+            {
+                price.setVolume(LatestSecurityPrice.NOT_AVAILABLE);
+            }
 
             if (price.getDate() == null || price.getValue() <= 0)
             {
@@ -98,6 +146,21 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
         {
             PortfolioLog.abbreviated(e);
             return Optional.empty();
+        }
+    }
+
+    private ZoneId extractTimezone(String exchangeTimezoneName, ZoneOffset defaultZone)
+    {
+        if (exchangeTimezoneName == null || exchangeTimezoneName.isEmpty())
+            return defaultZone;
+
+        try
+        {
+            return ZoneId.of(exchangeTimezoneName);
+        }
+        catch (DateTimeException e)
+        {
+            return defaultZone;
         }
     }
 
@@ -155,7 +218,7 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
         try
         {
             String responseBody = requestData(security, startDate);
-            return extractQuotes(responseBody);
+            return extractQuotes(responseBody, security.getCurrencyCode());
         }
         catch (IOException e)
         {
@@ -170,7 +233,7 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
         int days = Dates.daysBetween(startDate, LocalDate.now());
 
         // "max" only returns a sample of quotes
-        String range = "10y"; //$NON-NLS-1$
+        String range = "30y"; //$NON-NLS-1$
 
         if (days < 25)
             range = "1mo"; //$NON-NLS-1$
@@ -184,14 +247,24 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
             range = "2y"; //$NON-NLS-1$
         else if (days < 1500)
             range = "5y"; //$NON-NLS-1$
+        else if (days < 3000)
+            range = "10y"; //$NON-NLS-1$
+        else if (days < 6000)
+            range = "20y"; //$NON-NLS-1$
 
         return new WebAccess("query1.finance.yahoo.com", "/v8/finance/chart/" + security.getTickerSymbol()) //
+                        .addUserAgent(OnlineHelper.getYahooFinanceUserAgent()) //
                         .addParameter("range", range) //
                         .addParameter("interval", "1d").get();
 
     }
 
     /* package */ QuoteFeedData extractQuotes(String responseBody)
+    {
+        return extractQuotes(responseBody, ""); //$NON-NLS-1$
+    }
+
+    private QuoteFeedData extractQuotes(String responseBody, String securityCurrency)
     {
         List<LatestSecurityPrice> answer = new ArrayList<>();
 
@@ -213,23 +286,13 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
             if (result0 == null)
                 throw new IOException("result[0]"); //$NON-NLS-1$
 
+            String quoteCurrency = null;
             ZoneId exchangeZoneId = ZoneOffset.UTC;
             if (result0.containsKey("meta")) //$NON-NLS-1$
             {
                 JSONObject meta = (JSONObject) result0.get("meta"); //$NON-NLS-1$
-
-                String exchangeTimezoneName = (String) meta.get("exchangeTimezoneName"); //$NON-NLS-1$
-                if (exchangeTimezoneName != null)
-                {
-                    try
-                    {
-                        exchangeZoneId = ZoneId.of(exchangeTimezoneName);
-                    }
-                    catch (DateTimeException e)
-                    {
-                        // Ignore
-                    }
-                }
+                exchangeZoneId = extractTimezone((String) meta.get("exchangeTimezoneName"), ZoneOffset.UTC); //$NON-NLS-1$
+                quoteCurrency = (String) meta.get("currency"); //$NON-NLS-1$
             }
 
             JSONArray timestamp = (JSONArray) result0.get("timestamp"); //$NON-NLS-1$
@@ -238,25 +301,106 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
             if (indicators == null)
                 throw new IOException("indicators"); //$NON-NLS-1$
 
-            JSONArray quotes = extractQuotesArray(indicators);
+            JSONObject quotes = extractQuotesObject(indicators);
 
-            int size = quotes.size();
+            JSONArray close = (JSONArray) extractCloseArray(quotes);
+            int size = close.size();
 
+            JSONArray high = null;
+            try
+            {
+                high = (JSONArray) quotes.get("high"); //$NON-NLS-1$
+            }
+            catch (NullPointerException e)
+            {
+                // Ignore
+            }
+
+            JSONArray low = null;
+            try
+            {
+                low = (JSONArray) quotes.get("low"); //$NON-NLS-1$
+            }
+            catch (NullPointerException e)
+            {
+                // Ignore
+            }
+
+            JSONArray volume = null;
+            try
+            {
+                volume = (JSONArray) quotes.get("volume"); //$NON-NLS-1$
+            }
+            catch (NullPointerException e)
+            {
+                // Ignore
+            }
+
+            LatestSecurityPrice previous = null;
             for (int index = 0; index < size; index++)
             {
                 Long ts = (Long) timestamp.get(index);
-                Double q = (Double) quotes.get(index);
+                Double q = (Double) close.get(index);
+                Double h = null;
+                Double l = null;
+                Long v = null;
+
+                if (high != null && !high.isEmpty())
+                    try
+                    {
+                        h = (Double) high.get(index);
+                    }
+                    catch (IndexOutOfBoundsException e)
+                    {
+                        // Ignore
+                    }
+                if (low != null && !low.isEmpty())
+                    try
+                    {
+                        l = (Double) low.get(index);
+                    }
+                    catch (IndexOutOfBoundsException e)
+                    {
+                        // Ignore
+                    }
+                if (volume != null && !volume.isEmpty())
+                    try
+                    {
+                        v = (Long) volume.get(index);
+                    }
+                    catch (IndexOutOfBoundsException e)
+                    {
+                        // Ignore
+                    }
 
                 if (ts != null && q != null && q.doubleValue() > 0)
                 {
                     LatestSecurityPrice price = new LatestSecurityPrice();
                     price.setDate(LocalDateTime.ofInstant(Instant.ofEpochSecond(ts), exchangeZoneId).toLocalDate());
 
-                    // yahoo api seesm to return floating numbers --> limit to 4
-                    // digits which seems to round it to the right value
-                    double v = Math.round(q * 10000) / 10000d;
-                    price.setValue(Values.Quote.factorize(v));
-                    answer.add(price);
+                    price.setValue(convertBritishPounds(Values.Quote.factorize(roundQuoteValue(q)), quoteCurrency, securityCurrency));
+
+                    if (h != null && h.doubleValue() > 0)
+                        price.setHigh(convertBritishPounds(Values.Quote.factorize(roundQuoteValue(h)), quoteCurrency, securityCurrency));
+                    else
+                        price.setHigh(LatestSecurityPrice.NOT_AVAILABLE);
+
+                    if (l != null && l.doubleValue() > 0)
+                        price.setLow(convertBritishPounds(Values.Quote.factorize(roundQuoteValue(l)), quoteCurrency, securityCurrency));
+                    else
+                        price.setLow(LatestSecurityPrice.NOT_AVAILABLE);
+
+                    if (v != null && v.longValue() > 0)
+                        price.setVolume(v.longValue());
+                    else
+                        price.setVolume(LatestSecurityPrice.NOT_AVAILABLE);
+
+                    if (previous != null && previous.getDate().equals(price.getDate()))
+                        answer.set(answer.size() - 1, price);
+                    else
+                        answer.add(price);
+
+                    previous = price;
                 }
             }
         }
@@ -271,7 +415,7 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
         return data;
     }
 
-    protected JSONArray extractQuotesArray(JSONObject indicators) throws IOException
+    protected JSONObject extractQuotesObject(JSONObject indicators) throws IOException
     {
         JSONArray quotes = (JSONArray) indicators.get("quote"); //$NON-NLS-1$
         if (quotes == null || quotes.isEmpty())
@@ -281,11 +425,39 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
         if (quote == null)
             throw new IOException();
 
-        JSONArray close = (JSONArray) quote.get("close"); //$NON-NLS-1$
+        return quote;
+    }
+
+    protected JSONArray extractCloseArray(JSONObject quotes) throws IOException
+    {
+        JSONArray close = (JSONArray) quotes.get("close"); //$NON-NLS-1$
         if (close == null || close.isEmpty())
             throw new IOException("close"); //$NON-NLS-1$
 
         return close;
+    }
+
+    // Yahoo API seesms to return floating numbers --> limit to 4
+    // digits which seems to round it to the right value
+    protected double roundQuoteValue(double value)
+    {
+        return Math.round(value * 10000) / 10000d;
+    }
+
+    /**
+     * Convert GBP to GBX and vice versa if the quote and security currency
+     * match.
+     */
+    private long convertBritishPounds(long price, String quoteCurrency, String securityCurrency)
+    {
+        if (quoteCurrency != null)
+        {
+            if ("GBP".equals(quoteCurrency) && "GBX".equals(securityCurrency)) //$NON-NLS-1$ //$NON-NLS-2$
+                return price * 100;
+            if ("GBp".equals(quoteCurrency) && "GBP".equals(securityCurrency)) //$NON-NLS-1$ //$NON-NLS-2$
+                return price / 100;
+        }
+        return price;
     }
 
     @Override
@@ -306,7 +478,8 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
 
             answer.add(createExchange(plainSymbol));
 
-            ExchangeLabels.getAllExchangeKeys("yahoo.").forEach(e -> answer.add(createExchange(plainSymbol + "." + e))); //$NON-NLS-1$ //$NON-NLS-2$
+            ExchangeLabels.getAllExchangeKeys(ExchangeLabels.YAHOO)
+                            .forEach(e -> answer.add(createExchange(plainSymbol + "." + e))); //$NON-NLS-1$
         }
 
         return answer;
@@ -326,16 +499,16 @@ public class YahooFinanceQuoteFeed implements QuoteFeed
         {
             return new BufferedReader(new InputStreamReader(openStream(url)));
         }
-        catch (IOException e)
+        catch (IOException | URISyntaxException e)
         {
             errors.add(e);
         }
         return null;
     }
 
-    /* enable testing */
-    protected InputStream openStream(String wknUrl) throws IOException
+    @VisibleForTesting
+    protected InputStream openStream(String wknUrl) throws IOException, URISyntaxException
     {
-        return new URL(wknUrl).openStream();
+        return new URI(wknUrl).toURL().openStream();
     }
 }
